# ai_based_resume_reviewer

./: .gitignore  README.md  package-lock.json  pyproject.toml  tailwind.config.js
core/: settings.py  urls.py
resume_reviewer/: apps.py  urls.py  views.py
resume_reviewer/templates/resume_reviewer/: base.html  home.html  output.html
static/CACHE/css/: output.07bf05e60620.css  output.09e3e8d10472.css  output.0ad358521ef8.css  output.0e4a826bdf9e.css  output.18206e8470de.css  output.24584621d6e5.css  output.260cfd9acc05.css  output.27a5c8fb80af.css  output.2947ab1b3f55.css  output.2b3a028227a9.css  output.33ff606b1952.css  output.3ba58d79280a.css  output.4099c92bd738.css  output.41d2002f6795.css  output.459408dd0d7b.css  output.482dc2649a10.css  output.49f087279848.css  output.4dc341f9c4a9.css  output.52a555d8faf5.css  output.539d86005aa9.css  output.560fdad91e65.css  output.5969917f43cb.css  output.5fd5d3c56a73.css  output.675eb644428e.css  output.68eba169e5df.css  output.6e163811603d.css  output.6ef4c78621af.css  output.6f0b1479803b.css  output.6f160bc50d69.css  output.70696aa8986a.css  output.7473725d6248.css  output.78209bde0c27.css  output.8522b2da0e9d.css  output.90b6754131d3.css  output.a04b64524c62.css  output.a513092a5d2e.css  output.a68e885ae7ff.css  output.accd6fb47c5a.css  output.aef362b0fd17.css  output.af07547e8722.css  (+12 more)
static/css/: main.min.css
