[tool.poetry]
name = "ai-based-resume-reviewer"
version = "0.1.0"
description = ""
authors = ["yaswanthsaivendra <yaswanthsaivendra@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
django-rest-framework = "^0.1.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
